[package]
name = "hive_lineage"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlparser = "=0.59.0"
anyhow = "1"
itertools = "0.13"
once_cell = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
actix-web = "4"
tokio = { version = "1", features = ["full"] }
diesel = { version = "2", features = ["postgres", "r2d2", "chrono", "serde_json"] }
config = "0.14"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8"
dotenv = "0.15"
flate2 = "1"
pq-sys = { version = "0.7", features = ["bundled"] }
openssl-sys = { version = "0.9", features = ["vendored"] }

[dev-dependencies]
pretty_assertions = "1"

[profile.release]
debug = true
strip = "none"
